update spin models

--- a/examples/200_spin_example.ipynb
+++ b/examples/200_spin_example.ipynb
@@ -43,13 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8791d06c2b6e4709ac79d6931f62ec52",
+       "model_id": "ffee7ffa43174e2dbfd1e3ad0a76dc41",
        "version_major": 2,
        "version_minor": 0
       },
@@ -94,13 +94,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "142a17604b984895a80f7c2334ee0065",
+       "model_id": "5109f066633d44eeb9064086375f8f68",
        "version_major": 2,
        "version_minor": 0
       },
@@ -151,13 +151,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "573a0a86364b47aa8be349812741e971",
+       "model_id": "28990267ef634d739d7a1ed5502a169c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -220,7 +220,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "594ab8fd5d484b378d045ced07fc254b",
+       "model_id": "547c7ec502404438959e6eb7c74eab83",
        "version_major": 2,
        "version_minor": 0
       },
@@ -269,13 +269,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a97a9a29c5b7471c8687a6d33c184afb",
+       "model_id": "555597faf54f41f0ab841f36ed6a2eab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -331,13 +331,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e565060792cd4ac8a9fec10390fb1f2b",
+       "model_id": "d4b860ea7ad24039a3001e5b0602cb58",
        "version_major": 2,
        "version_minor": 0
       },
@@ -387,13 +387,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86cb466312b84befa037ed731ca233a9",
+       "model_id": "83ccdbf03d0b4306be865df0ded1ea56",
        "version_major": 2,
        "version_minor": 0
       },
@@ -784,7 +784,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -798,7 +798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
