--- a/examples/101_1dchain.ipynb
+++ b/examples/101_1dchain.ipynb
@@ -48,9 +48,9 @@
     "    mymodel.set_hop(t, 1,1, [0,0,1])\n",
     "    \n",
     "        # spin up\n",
-    "    mymodel.set_hop(t, 0,0, [0,1,0])\n",
+    "    mymodel.set_hop(t, 0,0, [0,0,-1])\n",
     "    # spin down\n",
-    "    mymodel.set_hop(t, 1,1, [0,1,0])\n",
+    "    mymodel.set_hop(t, 1,1, [0,0,-1])\n",
     "\n",
     "    mymodel.set(nel=nel, mixing=0.5, tol_energy=1e-8, tol_rho=1e-8, sigma=0.05)\n",
     "    mymodel.set_Hubbard_U(Utype='Dudarev', Hubbard_dict={'H':{'U':0, 'J':0}})\n",
@@ -62,12 +62,14 @@
     "    mymodel.scf_solve(print_iter_info=True)\n",
     "    efermi=mymodel.get_fermi_level()\n",
     "\n",
+    "    print(f\"Efermi: {efermi}\")\n",
     "    kpt_x=np.arange(0, 1.01,0.01)\n",
     "    kpts=[np.array([0,0,1]) * x for x in kpt_x]\n",
     "    evalues, evecs=mymodel.solve_all(k_list=kpts)\n",
     "\n",
+    "    print(mymodel._norbital)\n",
     "    for i in range(mymodel._norb):\n",
-    "        plt.plot(kpt_x, evalues[i,:])\n",
+    "        plt.plot(kpt_x, evalues[:, i])\n",
     "    plt.xlabel('k-point')\n",
     "    plt.ylabel('Energy')\n",
     "    plt.axhline(efermi, linestyle='--', color='gray')"
@@ -81,7 +83,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7fcf9802c0be4639ae23560a4e734044",
+       "model_id": "1760c9f776624788850e1c755ab32fd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,24 +100,16 @@
     "#run_1d_chain_1atom(t=1, nel=1)\n",
     "interact_manual(run_1d_chain_1atom, \n",
     "                t=FloatSlider(min=0,max=1, step=0.1,value=1.0),  \n",
-    "                nel=FloatSlider(min=0,max=2, step=0.1,value=1.0 ));"
+    "                nel=FloatSlider(min=0,max=2, step=0.01,value=1.0 ));"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pylab inline\n",
+    "%matplotlib| inline\n",
     "import numpy as np\n",
     "from  minimulti.electron.Hamiltonian import etb_model, atoms_model\n",
     "from minimulti.electron.basis2 import BasisSet, gen_basis_set, atoms_to_basis\n",
@@ -179,24 +173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a567c5a97a374f0fac7d90b51a0d3771",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatSlider(value=0.0, description='dt', max=1.0), Output()), _dom_classes=('widget-inte…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ipywidgets import FloatSlider, interact, interact_manual, fixed\n",
     "#run_1d_chain_1atom(t=1, nel=1)\n",
@@ -208,28 +187,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "908cbb75a356400e85bfd73865894055",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatSlider(value=0.3, description='dt', max=1.0), Output()), _dom_classes=('widget-inte…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ipywidgets import FloatSlider, interact, interact_manual, fixed\n",
     "#run_1d_chain_1atom(t=1, nel=1)\n",
-    "interact(run_1d_chain_2atom, \n",
+    "interact_manual(run_1d_chain_2atom, \n",
     "                t=fixed(1.0),\n",
     "                dt=FloatSlider(min=0.0, max=1.0, step=0.1, value=0.3),\n",
     "                nel=fixed(1.0));"
@@ -241,11 +205,18 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -259,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
